[package]
name = "srx"
version = "0.1.2"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"
description = "A mostly compliant Rust implementation of the Segmentation Rules eXchange (SRX) 2.0 standard for text segmentation."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bminixhofer/srx"
documentation = "https://docs.rs/srx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

# workaround to use a 'serde' feature which also enables 'serde_regex'
# see https://github.com/RustCrypto/RSA/pull/41/files
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_regex = {version = "1", optional = true }

# used for reading from an XML in SRX format
serde-xml-rs = { version = "0.4", optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"
bincode = "1"

[features]
serde = ["serde_crate", "serde_regex"]
from_xml = ["serde", "serde-xml-rs", "thiserror"]

[[bench]]
name = "bench"
harness = false

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]